syntax = "proto3";

package userservice;



service UserService {
  rpc RegisterUser (User) returns (UserResponse);
  rpc LoginUser (LoginRequest) returns (loginResponse);
  rpc GetUserById (UserRequest) returns (UserResponse);
  rpc UpdateUser (User) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (UserResponse);
  rpc ListUsers (empty) returns (UserList); // Use the standard Empty
}

message empty{}


message UserRequest {
  int32 id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message User {
  int32 id = 1;
  string userFirstname = 2;
  string userLastname = 3;
  string title = 4;
  string email = 5;
  int32 phonenr = 6;
  string username = 7;
  string password = 8;
  string userpermission = 9;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message UserList {
  repeated User users = 1;
}
message loginResponse{
  string token =1;
    }